# petri-polis

./: .gitignore  CLAUDE.md  Cargo.toml  README.md
.claude/agents/: petri-render.md  petri-rust.md
.github/pages/: index.html
.github/workflows/: ci.yml  docs.yml
app/: biome.json  index.html  package.json  tsconfig.json  vite.config.ts
app/src/: inspector.ts  main.ts  metrics.ts  presets.ts  urlstate.ts
app/src/render/: gl.ts
crates/petri-core/: Cargo.toml
crates/petri-core/src/: lib.rs
crates/petri-wasm/: Cargo.toml
crates/petri-wasm/src/: lib.rs
docs/: BACKLOG.md  DESIGN.md  ROADMAP.md  initial-spec.md
docs/guide/: book.toml
docs/guide/src/: SUMMARY.md  cross-species.md  determinism.md  diffusion-decay.md  ecology.md  evolution.md  geography.md  introduction.md  parameters.md  physarum-rule.md  presets.md  rendering.md  simulation-core.md  structure-metrics.md  sweeps.md  two-species.md  wasm.md
scripts/: build-wasm.sh
