[package]
name = "petri-wasm"
version.workspace = true
edition.workspace = true
license.workspace = true
description = "wasm-bindgen wrapper exposing petri-core::Sim with a zero-copy field handle."

[lib]
crate-type = ["cdylib", "rlib"]

[dependencies]
petri-core = { path = "../petri-core" }
wasm-bindgen = "0.2"
